Fix z-index of Top-Banner (#45)

--- a/client/css/include/top_banner&popup.css
+++ b/client/css/include/top_banner&popup.css
@@ -10,6 +10,7 @@
   line-height: 50px;
   position: fixed;
   top: 0;
+  z-index: 200;
 }
 .home__top-banner a {
   display: inline-block;
